Implemented index de registros y personas. Updated jumbotron en pagina de inicio.

--- a/SCEUCN-WEB/Pages/Index.cshtml
+++ b/SCEUCN-WEB/Pages/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Inicio";
 }
 
-<div class="jumbotron">
-    <h1>Portal Web SCEUCN</h1>
+<div class="jumbotron" style="background-image: url(http://www.ucn.cl/wp-content/uploads/2014/10/Cuadro-870x401.jpg); background-size: cover;">
+    <h1 class="text-light">Portal Web SCEUCN</h1>
 </div>
 <div class="row">
     <div class="col-md-6">
